<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.accelity.wow21.activities.LoginActivity">
    <ScrollView
        android:id="@+id/login_viewScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="20dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_logo"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/lout_login_emailmobile"
                    android:background="@drawable/bottom_brdr_style_default"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/ed_mobileno"
                        style="@style/edDefaultStyleNoBrd"
                        android:hint="@string/tv_login_email_hint"
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/lout_login_pwd"
                    android:background="@drawable/bottom_brdr_style_default"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_weight="1"
                        android:id="@+id/ed_password"
                        style="@style/edDefaultStyleNoBrd"
                        android:hint="@string/tv_login_pwd_hint"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:layout_marginRight="5dp"
                        android:padding="5dp"
                        android:id="@+id/img_password"
                        android:src="@drawable/ic_view_password_disable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                   <Button
                       android:id="@+id/btn_login"
                       android:layout_marginBottom="20dp"
                       android:text="@string/btn_login_login_text"
                       style="@style/greenBtnStyle"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" />
                   <Button
                       android:id="@+id/btn_forgetpwd"
                       style="@style/transparentBtnStyle"
                       android:layout_marginBottom="20dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/btn_login_forget_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_login_dnt_hv_acc_text"/>

                    <Button
                        android:layout_marginLeft="10dp"
                        android:id="@+id/btn_signup"
                        android:background="@drawable/small_green_btn"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:text="@string/btn_login_signup_text"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
