<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.accelity.wow21.activities.ForgetPasswordActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/logosection"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_logo"/>
                </LinearLayout>
                <LinearLayout
                    android:padding="20dp"
                    android:layout_below="@+id/logosection"
                    android:orientation="vertical"
                    android:id="@+id/step_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/lout_fpwd_npwd"
                        android:background="@drawable/bottom_brdr_style_default"
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/ed_npwd"
                            android:inputType="textPassword"
                            android:layout_weight="1"
                            style="@style/edDefaultStyleNoBrd"
                            android:hint="@string/tv_forgetpwd_npassword_hint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:layout_marginRight="5dp"
                            android:padding="5dp"
                            android:id="@+id/img_password"
                            android:src="@drawable/ic_view_password_disable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/lout_fpwd_ncpwd"
                        android:background="@drawable/bottom_brdr_style_default"
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/ed_ncpwd"
                            android:inputType="textPassword"
                            android:layout_weight="1"
                            style="@style/edDefaultStyleNoBrd"
                            android:hint="@string/tv_forgetpwd_cnpassword_hint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:visibility="invisible"
                            android:layout_marginRight="5dp"
                            android:padding="5dp"
                            android:id="@+id/img_cpassword"
                            android:src="@drawable/ic_view_password_disable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <Button
                        android:id="@+id/btn_chnagepwd"
                        android:layout_marginBottom="20dp"
                        android:text="@string/btn_forgetpwd_cpass_txt"
                        style="@style/greenBtnStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <RelativeLayout
                    android:visibility="gone"
                    android:id="@+id/step_2"
                    android:background="@color/colorPopupBG"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_gravity="bottom"
                            android:padding="10dp"
                            android:background="@color/colorWhite"
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:padding="10dp"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:id="@+id/otpsentText"
                                    android:layout_marginBottom="20dp"
                                    android:text="@string/tv_forgetpwd_instrucion_3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                                <LinearLayout
                                    android:id="@+id/lout_fpwd_enterotp"
                                    android:layout_marginBottom="20dp"
                                    android:background="@drawable/bottom_brdr_style_default"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                                    <EditText
                                        android:inputType="phone"
                                        android:id="@+id/ed_enterotp"
                                        android:layout_weight="1"
                                        style="@style/edDefaultStyleNoBrd"
                                        android:hint="@string/tv_forgetpwd_otp_hint"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"/>
                                </LinearLayout>
                                <Button
                                    android:layout_marginBottom="20dp"
                                    android:id="@+id/btn_submitotp"
                                    android:text="@string/btn_forgetpwd_verify_otp_txt"
                                    style="@style/greenBtnStyle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                                <Button
                                    android:id="@+id/btn_resendotp"
                                    android:text="@string/btn_otp_resend_text"
                                    style="@style/greenBtnStyle"
                                    android:background="@null"
                                    android:textColor="@color/colorAnchorBlue"
                                    android:textAllCaps="false"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                        </LinearLayout>
                    </ScrollView>
                </RelativeLayout>
                <RelativeLayout
                    android:visibility="visible"
                    android:id="@+id/step_1"
                    android:background="@color/colorPopupBG"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_gravity="bottom"
                            android:padding="10dp"
                            android:background="@color/colorWhite"
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <LinearLayout
                                    android:padding="10dp"
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                                    <TextView
                                        android:visibility="gone"
                                        android:layout_marginBottom="10dp"
                                        android:text="@string/tv_forgetpwd_instrucion_1"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                    <TextView
                                        android:layout_marginBottom="10dp"
                                        android:text="@string/tv_forgetpwd_instrucion_2"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                    <LinearLayout
                                        android:id="@+id/lout_fpwd_emailormobile"
                                        android:layout_marginBottom="10dp"
                                        android:background="@drawable/bottom_brdr_style_default"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
                                        <EditText
                                            android:inputType="phone"
                                            android:id="@+id/ed_emailormobile"
                                            android:layout_weight="1"
                                            style="@style/edDefaultStyleNoBrd"
                                            android:hint="@string/tv_forgetpwd_mobileemail_hint"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"/>
                                    </LinearLayout>
                                    <Button
                                        android:id="@+id/btn_submit"
                                        android:text="@string/btn_forgetpwd_generate_otp_txt"
                                        style="@style/greenBtnStyle"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>
                    </ScrollView>

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
</RelativeLayout>
